--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <!-- CSS only -->
 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> -->
@@ -141,12 +142,103 @@
                     <p>There are many variations of passages but the majority have suffered alteration in some form</p>
 
                 </div>
-
-                
-
-
             </div>
         </div>
     </section>
+
+    <section class = 'freelancer'>
+        <h1>I'm Available for Freelance </h1>
+        <p>We provide high standard clean website for your business solution</p>
+        <button class = 'btn btn-primary'>Download CV</button>
+    </section>
+    <section class = 'reviews'>
+        <div class="container">
+            <h1 class= 'section-heading'><span>Our</span> Customers</h1>
+            <p>We provide high standard clean website for your business solution</p>
+        </div>
+        <div class='slider'>
+            <div class='slide'>
+                <img src="./images/elonmusk.jpg" alt="">
+                <p>"Failure is an option here. If things are not failing, you are not innovating enough."</p>
+                <span> - Elon Musk, Tesla</span>
+            </div>
+
+            <div class='slide'>
+                <img src="./images/steve.jpg" alt="">
+                <p>"Design is not just what it looks like and feels like. Design is how it works."</p>
+                <span> - Steve Jobs, Apple</span>
+            </div>
+
+            <div class='slide'>
+                <img src="./images/jeff.jpg" alt="">
+                <p>"If you do build a great experience, customers tell each other about that. Word of mouth is very powerful."</p>
+                <span> - Jeff Bezos, Amazon</span>
+            </div>
+
+            <div class='slide'>
+                <img src="./images/jackma.jpg" alt="">
+                <p>"On the path to success, you will notice that the successful ones are not whiners, nor do they complain often."</p>
+                <span> - Jack Ma, Alibaba</span>
+            </div>          
+        </div>
+        <div class='slider-dots'></div>
+    </section>
+
+    <section class='projects'>
+            <div class="container">
+                <h1 class='section-heading'><span>Our</span> Projects</h1>
+                <p>We provide high standard clean website for your business solution</p>
+
+                <div class='card-wrapper'>
+                    <div class='card'>
+                        <div class='overlay'>
+                            <span>Category</span>
+                            <a href="#">Web Development</a>
+                        </div>
+                        <img src="./images/webicon.jpg" alt="">
+                    </div>
+                    <div class='card'>
+                        <div class='overlay'>
+                            <span>Category</span>
+                            <a href="#">App Development</a>
+                        </div>
+                        <img src="./images/appicon.jpg" alt="">
+                    </div>
+                    <div class='card'>
+                        <div class='overlay'>
+                        <span>Category</span>
+                        <a href="#">Freelance Project</a>
+                    </div>
+                        <img src="./images/free.jpg" alt="">
+                    </div>
+                    <div class='card'>
+                        <div class='overlay'>
+                            <span>Category</span>
+                            <a href="#">Machine Learning</a>
+                        </div>
+                        <img src="./images/Deep-Learning-vs-Machine-Learning.jpg" alt="">
+                    </div>
+                    <div class='card'>
+                        <div class='overlay'>
+                            <span>Category</span>
+                            <a href="#">Image Processing</a>
+                        </div>
+                        <img src="./images/image.jpg" alt="">
+                    </div>
+                    <div class='card'>
+                        <div class='overlay'>
+                            <span>Category</span>
+                            <a href="#">Django Framework</a>
+                        </div>
+                        <img src="./images/djangoimage.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+
+    </section>
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="./js/app.js" ></script>
 </body>
 </html>
