--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 <a href=""><i class="fab fa-linkedin-in"></i></a>
             </div>
             <div class='copyright'>
-                Copyright 2019 &copy; Name PSD Template.All Rights Reserved. 
+                Copyright 2019 &copy;. All Rights Reserved. 
             </div>
     
         </footer>
