--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                         <h1>I'm a Creative <span>Designer</span> </h1>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, tempora modi minima earum tenetur asperiores nulla voluptates officia mollitia laudantium pariatur doloribus doloremque eum nobis deleniti inventore odio, ea reiciendis?</p>
                         <div>
-                            <button class= 'btn btn-secondary'>DOWNLOAD CV</button>
+                            <a href="CV of Shaikh Sohail.pdf">
+                            <button type='submit' class= 'btn btn-secondary'>DOWNLOAD CV</button>
+                            </a>
                         </div>
                     </div>
     
@@ -356,7 +358,7 @@
                 <a href=""><i class="fab fa-linkedin-in"></i></a>
             </div>
             <div class='copyright'>
-                Copyright 2019 &copy; Name PSD Template.All Rights Reserved. 
+                Copyright 2019 &copy;. All Rights Reserved. 
             </div>
     
         </footer>
