--- a/index.html
+++ b/index.html
@@ -64,9 +64,7 @@
                         <h1>I'm a Creative <span>Designer</span> </h1>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, tempora modi minima earum tenetur asperiores nulla voluptates officia mollitia laudantium pariatur doloribus doloremque eum nobis deleniti inventore odio, ea reiciendis?</p>
                         <div>
-                            <a href="CV of Shaikh Sohail.pdf">
-                            <button type='submit' class= 'btn btn-secondary'>DOWNLOAD CV</button>
-                            </a>
+                            <button class = 'btn btn-primary'>Download CV</button>
                         </div>
                     </div>
     
